gitops/mc/db-job.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresqldb
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: postgresqldb
      protocol: TCP
      port: 5432
      targetPort: 5432
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    name: postgresql
